# Crestron-Broker

./: .gitignore  README.md  requirements.txt
app/: broker_service.py  config.py  main.py  matrox_client.py  models.py  payload_manager.py  state_store.py  tcp_server.py  websocket_server.py
concept/: Plain_concept_20260422_v1.txt  Prompt_concept_20260422_v1.txt
config/: config.example.yaml  config.yaml
payload/: Multicast_Audio_Stream_Disable.json  Multicast_Audio_Stream_Enable.json  Multicast_Video_Stream_Disable.json  Multicast_Video_Stream_Enable.json  Multicast_audio_input_1.json  Multicast_audio_input_2.json  Multicast_audio_input_3.json  Multicast_audio_input_4.json  Multicast_video_input_1.json  Multicast_video_input_2.json  Multicast_video_input_3.json  Multicast_video_input_4.json
state/: broker_state.json
tools/: test_client.py
visualizer-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
visualizer-ui/src/: App.svelte  app.css
visualizer-ui/src-tauri/: Cargo.toml  tauri.conf.json
visualizer-ui/src-tauri/capabilities/: default.json
visualizer-ui/src-tauri/src/: lib.rs  main.rs
visualizer-ui/src/lib/: types.ts
visualizer-ui/src/lib/components/: ConnectionCanvas.svelte  InputCard.svelte  SourceCard.svelte
visualizer-ui/src/lib/stores/: routingStore.ts
