[package]
name = "routing-visualizer"
version = "0.1.0"
description = "Read-only routing visualization desktop app"
authors = ["Codex"]
edition = "2021"

[lib]
name = "routing_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
log = "0.4"
